[gd_scene load_steps=5 format=3 uid="uid://dgtu4rdbwqlx4"]

[ext_resource type="Script" path="res://Scripts/UI/game_over.gd" id="1_842fx"]
[ext_resource type="FontFile" uid="uid://bqtl52xy2arj6" path="res://Fonts/superstar_memesbruh03.ttf" id="2_bbhfb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ejcrs"]
bg_color = Color(0.752941, 0.243137, 0.419608, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.960784, 0.756863, 0.560784, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a4p74"]
bg_color = Color(0.45098, 0.666667, 0.403922, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[node name="GameOver" type="CanvasLayer"]
script = ExtResource("1_842fx")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ejcrs")

[node name="LessonFinishedLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -87.0
offset_top = -54.0
offset_right = 87.0
offset_bottom = -34.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_bbhfb")
theme_override_font_sizes/font_size = 20
text = "Lesson is Finished"

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.0
offset_top = -19.0
offset_right = 54.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_bbhfb")
theme_override_font_sizes/font_size = 16
text = "Score:"

[node name="MaxScoreLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.0
offset_right = 54.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_bbhfb")
theme_override_font_sizes/font_size = 16
text = "Max score:"

[node name="RetryBtn" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -143.0
offset_top = 34.0
offset_right = -39.0
offset_bottom = 57.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_bbhfb")
theme_override_styles/normal = SubResource("StyleBoxFlat_a4p74")
text = "Retry Session"

[node name="QuitSessionBtn" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 40.0
offset_top = 34.0
offset_right = 136.0
offset_bottom = 57.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_bbhfb")
theme_override_styles/normal = SubResource("StyleBoxFlat_a4p74")
text = "Quit Session"

[connection signal="pressed" from="RetryBtn" to="." method="_on_retry_btn_pressed"]
[connection signal="pressed" from="QuitSessionBtn" to="." method="_on_quit_session_btn_pressed"]
